# Lossless-Audio-Codec

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROBLEMS.md  README.md  SECURITY.md  SUPPORT.md  test_all.sh
.cache/clangd/index/: bit_reader.cpp.425DAC6A3CC3FA6C.idx  bit_reader.hpp.FABA3A33953A3313.idx  bit_writer.cpp.9CB1CD271B8467ED.idx  bit_writer.hpp.D49EB91C59151CA4.idx  constants.hpp.149E0026DD4965C4.idx  decoder.cpp.DCA185B7BA446F2C.idx  decoder.cpp.F5F2491FF7D86E01.idx  decoder.hpp.2447C7068A8835EE.idx  decoder.hpp.3F8BADF558F447F6.idx  encoder.cpp.37CD8FCA60810B87.idx  encoder.cpp.ED0AEE57C321DBE0.idx  encoder.hpp.2B9BAA3D58C09BB4.idx  encoder.hpp.962066A382F2D4B6.idx  frame_header.hpp.F8DE0575E1AF6842.idx  logger.cpp.B891AEBF609C3669.idx  logger.hpp.587DFCFFE97A7ED1.idx  lpc.cpp.DE1F64B6FAA1A735.idx  lpc.hpp.F844E75C4A9A11BF.idx  main.cpp.F8B9F8C53B2C7B7E.idx  neon.cpp.2400F0CC9744FA95.idx  neon.hpp.A1F9C8FD61DBF05B.idx  rice.cpp.EF80D9BC550A0078.idx  rice.hpp.1F0B9723D5C49F6F.idx  rice_neon.cpp.EDF857A2D2D32CA0.idx  rice_neon.hpp.6A53FD07BB17F3B3.idx  thread_collector.hpp.E2F509CB66A9224E.idx  wav_io.cpp.3A0CB8FF1C99E776.idx  wav_io.hpp.08B8A65B737F7BC3.idx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hardening_task.md
.github/workflows/: ci.yml  codeql.yml
docs/: format.md  fuzzing.md  maintainer-workflow.md  refactor-roadmap.md  release-checklist.md  supported-formats.md
include/lac/: lac.hpp  version.hpp
scripts/: codex-review.sh
src/: main.cpp
src/codec/bitstream/: bit_reader.cpp  bit_reader.hpp  bit_writer.cpp  bit_writer.hpp  frame_header.hpp
src/codec/block/: constants.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/codec/frame/: frame_header.hpp
src/codec/lac/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  thread_collector.hpp  thread_limit.hpp
src/codec/lpc/: lpc.cpp  lpc.hpp
src/codec/rice/: rice.cpp  rice.hpp
src/codec/simd/: neon.cpp  neon.hpp  rice_neon.cpp  rice_neon.hpp
src/io/: wav_io.cpp  wav_io.hpp
src/utils/: logger.hpp
tests/: test_cli.cpp  test_e2e.cpp  test_lpc.cpp  test_partitioning.cpp  test_predictors.cpp  test_rice.cpp  test_zerorun.cpp
